# Matching_Engine

./: .gitignore  Description of Problem and Solution.docx  README.md  ~$scription of Problem and Solution.docx
simple_cross_junior/: CMakeLists.txt  simple_cross.cpp  simple_cross.h
simple_cross_junior/includes/: book_builder.h  order_management_system.h  simple_cross.h
simple_cross_junior/src/: book_builder.cpp  main.cpp  order_management_system.cpp
simple_cross_junior/testcases/: IncorrectInputs.txt  MultipleSymbols.txt  SuccessfulCrosses.txt
